node view entries

--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -29,7 +29,7 @@ colorHSL.output();
   <ol class="w40 condensed-list ">
     <li class="mango">the modified object.</li>
     <li class="mango">the name of the new property.</li>
-    <li class="mango">a javascript object which I can configure. NOTE: <span class="paleY">value:</span> is one (among several) built-in keys to used with .defineProperty();</li>
+    <li class="mango">a javascript object which I can configure.<br /> NOTE: <span class="paleY">value:</span> is one (among several) built-in keys to used with .defineProperty();</li>
   </ol>
   <pre class="prettyprint ctr w40">
     Object.defineProperty(colorHSL, "modSat", {
