--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -6,6 +6,7 @@
     <h2 class="date">Monday July 17th, 2017</h2>
     <h4 class="sleep">Slept: 7 hours</h4><br><br>
     <h3 class="subtitle">Placeholder</h3>
+    <blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="ro" dir="ltr">Create and animate SVG Polygons <a href="https://t.co/WDWjp76muo">https://t.co/WDWjp76muo</a> /<a href="https://twitter.com/CreativeBloq">@CreativeBloq</a></p>&mdash; Webdesigner Depot (@DesignerDepot) <a href="https://twitter.com/DesignerDepot/status/890337210758819841">July 26, 2017</a></blockquote>
 
     <br>
     <h3>To do:</h3>
@@ -20,6 +21,23 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Monday July 17th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Placeholder</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="ro" dir="ltr">Create and animate SVG Polygons <a href="https://t.co/WDWjp76muo">https://t.co/WDWjp76muo</a> /<a href="https://twitter.com/CreativeBloq">@CreativeBloq</a></p>&mdash; Webdesigner Depot (@DesignerDepot) <a href="https://twitter.com/DesignerDepot/status/890337210758819841">July 26, 2017</a></blockquote>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Monday July 24th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Made some interesting discoveries about .defineProperty() method yesterday--that ships with "value", "writeable", "enumerable", "get" & "set" (and other?) properties. Interesting stuff.</h3>
