--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -22,24 +22,25 @@
     <hr />
   -->
   <h2 class="date">Monday July 17th, 2017</h2>
-  <h4 class="sleep">Slept: 7 hours</h4><br><br>
-  <h3 class="subtitle">Placeholder</h3>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Two days of keeping my chops up in node.js and express.js. Lots of fun. Still a bit in my comfort zone, frankly. Not pushing myself enough. I do believe, though, that the entries in this journal will be useful ultimately once all of this is put into a database and each and all of the html is queried via SQL. Endpoints are no longer painful for me and so a goal has been reached.</h3>
   <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="ro" dir="ltr">Create and animate SVG Polygons <a href="https://t.co/WDWjp76muo">https://t.co/WDWjp76muo</a> /<a href="https://twitter.com/CreativeBloq">@CreativeBloq</a></p>&mdash; Webdesigner Depot (@DesignerDepot) <a href="https://twitter.com/DesignerDepot/status/890337210758819841">July 26, 2017</a></blockquote>
 
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
-    <li></li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li>Node.js entries on endpoints and working with postman.</li>
+    <li>Discussion (and entries in codejournal) regarding splitting up code.</li>
+    <li><span class="ltred">Potential Blocks:</span> I'm not quite 100% sure about the niceties of .next()--but that will come with one more run through, I suspect</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Endpoints, splitting up code in to controllers & models folders... the entries for these topics has been completed.</li>
+    <li>Exercises for each have been completed though I'm not bothering to push them to github.</li>
   </ol>
   <hr />
   <h2 class="date">Monday July 24th, 2017</h2>
-  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Made some interesting discoveries about .defineProperty() method yesterday--that ships with "value", "writeable", "enumerable", "get" & "set" (and other?) properties. Interesting stuff.</h3>
   <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">The latest UI Animation Newsletter is all about animating with CSS Variables: <a href="https://t.co/GlHZA7WOjg">https://t.co/GlHZA7WOjg</a> <a href="https://t.co/1kUaXZHAAh">pic.twitter.com/1kUaXZHAAh</a></p>&mdash; Val Head (@vlh) <a href="https://twitter.com/vlh/status/889572186641530880">July 24, 2017</a></blockquote>
   <br>
