--- a/states/node/node.html
+++ b/states/node/node.html
@@ -3,6 +3,33 @@
   <aside><span class="rot90">{{state}}</span></aside>
   <div class="node-entry entry">
 <pre>
+  <div class="framed8"><h3 class="chtitle">A nice bit of middleware to log queries</h3>
+<pre class="dkbg ltgrey">...
+var PORT = 5000;
+<div class="fRight w40 thin ltgreen"> This is simply a bit of code to help in debugging and logging certain queries on certain endpoints<br />
+It isn't necessary on each.<br />
+Note: that .next() is run under the hood in express, but it's necessary to place at the end of logQuery<br />
+Otherwise, it wont run the 3rd arg in the function signature of the endpoint.</div>
+var app = express();
+
+<span class="mutedOrange">var <span class="mango">logQuery</span> = function(req, res, next) {
+  console.log('req.query: ', req.query);
+  console.log('req.body: ', req.body);
+  console.log('req.path: ', req.path);
+  <span class="pastpink">next();</span>
+}</span>
+
+
+app.use(bodyParser.json());
+
+app.get('/meals', <span class="mango">logQuery</span>, mealsCtrl.index);
+app.get('/meals/:id', mealsCtrl.show);
+app.post('/meals', <span class="mango">logQuery</span>, mealsCtrl.create);
+app.delete('/meals/:id', mealsCtrl.destroy);
+...
+</pre>
+
+  </div>
   <div class="framed6">
     <h3 class="chtitle">Refactoring our <em>server.js</em> file for modularity</h3>
     We have a problem. Our server.js file's endpoints are heavy. There's no modularity. Let's fix this.
