--- a/states/sass/sass.html
+++ b/states/sass/sass.html
@@ -209,12 +209,13 @@ Then, margin-left: <em>NEGATIVE HALF the width of the box</em></div>
 </div>
 
 </div>
-<div class="w60 ctrtxt">
-<br>
+<div class="ctrtxt">
+
+
 <h3 class="chtitle ivr">This is centered both horiz & vertically!</h3><br>
-<img class="w20 ctrtxt" src="./img/ctrxy.png" alt="vert and horiz centering">
+<img class="w20 ctr" src="./img/ctrxy.png" alt="vert and horiz centering">
 <h3 class="chtitle sand">However, This code was perfect for an svg loader:</h3>
-<pre class="prettyprint w40">
+<div class="dkbg w40 ctr txt-left">
   .svg-container {
     position: absolute;
     height: 50vh;
@@ -229,7 +230,8 @@ Then, margin-left: <em>NEGATIVE HALF the width of the box</em></div>
     width: 50vw;
     height: 50vh;
   }
-// It is also more 'robust' given absence of pixel values</pre>
+  <br>
+<span class="thin ltgreen">// It is also more 'robust' given absence of pixel values</span></div>
 
 <br>
 </div>
