--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,9 +21,21 @@
     </ol>
     <hr />
   -->
-  <h2 class="date">Monday July 17th, 2017</h2>
+  <h2 class="date">Tuesday July 25th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
-  <h3 class="subtitle">Two days of keeping my chops up in node.js and express.js & basic endpoints. Lots of fun. Still well within my comfort zone, frankly. Not pushing myself enough. I do believe, though, that the entries in this journal will be useful ultimately once all of this is put into a database and each and all of the html is queried via SQL. Endpoints are no longer painful for me and so a goal has been reached.</h3>
+  <h3 class="subtitle">Two days of keeping my chops up in node.js and express.js & basic endpoints. Lots of fun. Still well within my comfort zone, frankly. Not pushing myself enough. I do believe, though, that the entries in this journal will be useful ultimately once all of this is put into a database and each and all of the html is queried via SQL. Endpoints are no longer painful for me and so a goal has been reached.
+  <br><br><br>
+  This is cool. From StackOverflow:
+
+  The code on the right is a terse version of that on the left using "~":
+  <div class="col-2 ltgreen"><pre class="w40 dkblue">var index = items.indexOf(3452);
+  if (index !== -1) {
+  items[index] = 1010;
+  }</pre>
+  <pre class="dkred CodePro">var index = items.indexOf(3452);
+  if (~index) {
+    items[index] = 1010;
+  }</pre></div></h3>
   <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="ro" dir="ltr">Create and animate SVG Polygons <a href="https://t.co/WDWjp76muo">https://t.co/WDWjp76muo</a> /<a href="https://twitter.com/CreativeBloq">@CreativeBloq</a></p>&mdash; Webdesigner Depot (@DesignerDepot) <a href="https://twitter.com/DesignerDepot/status/890337210758819841">July 26, 2017</a></blockquote>
 
   <br>
