cleanup journal entries, node entries

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,11 +21,60 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Friday July 28th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Placeholder</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+  <h2 class="date">Thursday July 27th, 2017</h2>
+  <h4 class="sleep">Slept: 8 hours</h4><br><br>
+  <h3 class="subtitle">Working lots with postman and examining headers. Progress is good.</h3>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>complete entry in node.js for express and express-sessions</li>
+    <li>modify yesterday's entries of endpoints to handle variable portion of the path to accomodate "/:id" identifying one item in the Array stored in the back-end (node controller)</li>
+    <li><span class="ltred">Potential Blocks:</span> none</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Express-sessions entry in node complete--project completed and pushed</li>
+    <li>Modified entry for node sessions. Entry in node.js view is now complete.</li>
+  </ol>
+  <hr />
+  <h2 class="date">Wednesday July 26th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">I'm finally going to break the back of sessions and express-session and what it does with placing cookies on the header or requests and responses</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Refactoring and splitting code for modularity (endpoints and controllers) in node</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> time budgetting</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>splitting code and controllers in node entry complete</li>
+    <li>middleware for logging queries entry complete (node.js view)</li>
+  </ol>
+  <hr />
   <h2 class="date">Tuesday July 25th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Two days of keeping my chops up in node.js and express.js & basic endpoints. Lots of fun. Still well within my comfort zone, frankly. Not pushing myself enough. I do believe, though, that the entries in this journal will be useful ultimately once all of this is put into a database and each and all of the html is queried via SQL. Endpoints are no longer painful for me and so a goal has been reached.
   <br><br><br>
-  This is cool. From StackOverflow:
+  This is great. From StackOverflow:
 
   The code on the right is a terse version of that on the left using "~":
   <div class="col-2 ltgreen"><pre class="w40 dkblue">var index = items.indexOf(3452);
