--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,15 +21,15 @@
     </ol>
     <hr />
   -->
-  <h2 class="date">Friday July 28th, 2017</h2>
+  <h2 class="date">Thursday Aug 3rd, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
-  <h3 class="subtitle">Placeholder</h3>
+  <h3 class="subtitle">I've begun React using two sources: <a target="_blank" href="https://frontendmasters.com/courses/react/">FrontEndMasters Intro to React v.3</a> with Brian Holt & Tyler McGinnis <a target="_blank" href="https://www.youtube.com/watch?v=ul0tRkeu5CE&list=PLqrUy7kON1mc7U60YUaN3ZR9EHlh9fsDL">React Fundamentals</a> --Neither of which use "create-react-app" which is a way to set up react without control over the tooling. It's loads of fun, but lots of moving parts--trading complexity for ease of use. There are so many discoveries I've made in the past few days...too many to mention. I will add another section to <em>Code Journal</em> which is already bursting at the seams.</h3>
 
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
-    <li></li>
+    <li>Finish Tyler McG's React Lecture and its companion project using AXIOS to deal with the Github API.</li>
+    <li>Return to the FEM React lessons and continue with its project. I'm 27 lectures into what seems to be close to 100.</li>
     <li><span class="ltred">Potential Blocks:</span></li>
   </ol><br>
   <h3>Done: </h3>
@@ -305,7 +305,7 @@ The primary implication of Fitts’ law is that close, large targets can be acce
         <li>Dark-house is 99% done. It took many hours.</li>
       </ol>
   <hr />
-  <h2 class="date">Thursday June NUMth, 2017</h2>
+  <h2 class="date">Thursday June 22nd, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Felt the burnout yesterday and today after a positioning fiasco. I should've used CSS Grid purely with tinier columns...<br /><br />
     RL tasks are getting in the way. Not much progress. Took a break and saw all of 'Maiden's Tale" last night. Wedding trip this weekend. --Have to get a suit.</h3>
