--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -24,7 +24,8 @@
   <h2 class="date">Thursday Aug 3rd, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">I've begun React using two sources: <a target="_blank" href="https://frontendmasters.com/courses/react/">FrontEndMasters Intro to React v.3</a> with Brian Holt & Tyler McGinnis <a target="_blank" href="https://www.youtube.com/watch?v=ul0tRkeu5CE&list=PLqrUy7kON1mc7U60YUaN3ZR9EHlh9fsDL">React Fundamentals</a> --Neither of which use "create-react-app" which is a way to set up react without control over the tooling. It's loads of fun, but lots of moving parts--trading complexity for ease of use. There are so many discoveries I've made in the past few days...too many to mention. I will add another section to <em>Code Journal</em> which is already bursting at the seams.</h3>
-
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">CSS Grid Garden - <a href="https://t.co/X0rXPiNN66">https://t.co/X0rXPiNN66</a> - An interactive game to learn CSS Grid. The code is also on Github: <a href="https://t.co/roUhQtyn5c">https://t.co/roUhQtyn5c</a> <a href="https://t.co/W7N3HsBkCI">pic.twitter.com/W7N3HsBkCI</a></p>&mdash; Umar Hansa (@umaar)
+    <a href="https://twitter.com/umaar/status/849933702587187200">April 6, 2017</a></blockquote>
   <br>
   <h3>To do:</h3>
   <ol class="todo">
@@ -40,6 +41,9 @@
   <h2 class="date">Thursday July 27th, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
   <h3 class="subtitle">Working lots with postman and examining headers. Progress is good.</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Understanding Hoisting in JavaScript by emabishi <a href="https://t.co/GjDlsXkvE2">https://t.co/GjDlsXkvE2</a> <a href="https://twitter.com/hashtag/javascript?src=hash">#javascript</a> via JavaScriptKicks</p>&mdash; JavaScriptKicks (@JavaScriptKicks)
+    <a href="https://twitter.com/JavaScriptKicks/status/823222750194102272">January 22, 2017</a></blockquote>
+
   <br>
   <h3>To do:</h3>
   <ol class="todo">
@@ -56,7 +60,8 @@
   <h2 class="date">Wednesday July 26th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">I'm finally going to break the back of sessions and express-session and what it does with placing cookies on the header or requests and responses</h3>
-
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">Learn how to create a smooth sliding menu by watching me talk for about 20 minutes: <a href="https://t.co/I2mGleY6ET">https://t.co/I2mGleY6ET</a> 😝 <a href="https://twitter.com/hashtag/webdev?src=hash">#webdev</a> <a href="https://twitter.com/hashtag/ui?src=hash">#ui</a></p>&mdash; Kirupa 🍊 (@kirupa)
+    <a href="https://twitter.com/kirupa/status/822278359858036736">January 20, 2017</a></blockquote>
   <br>
   <h3>To do:</h3>
   <ol class="todo">
