journal entries from the weekend

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,10 +3,12 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Monday July 17th, 2017</h2>
-    <h4 class="sleep">Slept: 7 hours</h4><br><br>
-    <h3 class="subtitle">Placeholder</h3>
-    <blockquote class="twitter-tweet" data-cards="hidden" data-lang="en"><p lang="ro" dir="ltr">Create and animate SVG Polygons <a href="https://t.co/WDWjp76muo">https://t.co/WDWjp76muo</a> /<a href="https://twitter.com/CreativeBloq">@CreativeBloq</a></p>&mdash; Webdesigner Depot (@DesignerDepot) <a href="https://twitter.com/DesignerDepot/status/890337210758819841">July 26, 2017</a></blockquote>
+    <h2 class="date">Friday Aug 4th, 2017</h2>
+    <h4 class="sleep">Slept: 5 hours</h4><br><br>
+    <h3 class="subtitle">React is slow-going. The implementation of things like Obj destructuring seem deceptively easy. --Surprisingly easy. I've been offered the opportunity to beta test the training (to be launched next week) by Petr at  </h3>
+    <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+    <p lang="en" dir="ltr">The rendering process of a web page <a href="https://t.co/vWjj77tYzv">https://t.co/vWjj77tYzv</a>
+    </p>&mdash; Sven Baumgartner (@svenbaumgartner) <a href="https://twitter.com/svenbaumgartner/status/793736407789477889">November 2, 2016</a></blockquote>
 
     <br>
     <h3>To do:</h3>
@@ -19,8 +21,56 @@
     <ol class="done">
       <li>PLACEHOLDERDONETASKS</li>
     </ol>
-    <hr />
+        <hr />
   -->
+  <h2 class="date">Saturday Aug 5th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Slept well and have decided to go with yet another react class. FEM/WesBos/Front-end Masters and now, Tyler McGinnis. They, each, seem pretty current. My instinct is to demur from "start-react-app" (or whatever-its-called). It's against my religion, --Not because I'm hard-core, it's just that I, one day, want to be responsible for the tooling. (Though, Wes-bos's course teaches how to "eject" from that in order to get access to the tooling, but I haven't gotten that far.)
+  So, thus far, it's still too new to comment on react. I just have to keep drinking that coolaid. This weekend is heads-down react.</h3>
+
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+  <p lang="en" dir="ltr">The rendering process of a web page <a href="https://t.co/vWjj77tYzv">https://t.co/vWjj77tYzv</a>
+  </p>&mdash; Sven Baumgartner (@svenbaumgartner) <a href="https://twitter.com/svenbaumgartner/status/793736407789477889">November 2, 2016</a></blockquote>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Finish Front-end portion of Wes-Bos's training for react.</li>
+    <li>More design typography lectures.</li>
+    <li>I hate potatoes react training beta-testing --Take notes to be submitted on Monday to Petr.</li>
+    <li><span class="ltred">Potential Blocks:</span> none. Enthusiasm/Energy is good! :)</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Wes Bos's Front-end portion (prior to the Firebase bits) is done & pushed!</li>
+    <li>Deep into I hate tomatoes react training.</li>
+  </ol>
+      <hr />
+  <h2 class="date">Friday Aug 4th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">React is slow-going. The implementation of things like Obj destructuring seem deceptively easy. --Surprisingly easy. I've been offered the opportunity to beta test the training (to be launched next week) by Petr at <a target="_blank" href="https://ihatetomatoes.net/">I Hate Tomatoes</a>. It's a bit of a thrill, and still a bit over my head. I will have to devote the next weeks (/months?) to React to get "up 'n running"--I have to say that it's a complete paradigm shift.
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">How to make a transparent glass menu bar with <a href="https://twitter.com/hashtag/CSS3?src=hash">#CSS3</a><a href="https://t.co/6ryNIo1NTd">https://t.co/6ryNIo1NTd</a><br>---<a href="https://twitter.com/hashtag/CSS?src=hash">#CSS</a>
+
+  </p>&mdash; Creative Punch (@creative_punch) <a href="https://twitter.com/creative_punch/status/893711928077561856">August 5, 2017</a></blockquote>
+  <br /><br />I was very surprised to hear an explanation by WesBos that it is, in fact, NOT a departure from "separation of concerns" at all--But, rather, a more organic response to how the modern developer seems to be approaching web dev--via components. Writing JSX is, at first, so counter-intuitive...But I've tasted the coolaid and it is delicious.</h3>
+
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Wes Bos's React Intro training 1st half</li>
+    <li>Lynda lectures on typography & white-space vs empty-space.</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> time management problems (it's a busy real-life day) --But I'll budget carefully.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>Wes Bos's training is good. It's a bit speedy for my taste, but that's what the pause btn is for. --Done!</li>
+    <li>Design training done. --Great ideas to rework this poor app that needs to be overhauled. --I'm recognizing all the flaws, now. lol.</li>
+  </ol>
+  <hr />
+
+
   <h2 class="date">Thursday Aug 3rd, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">I've begun React using two sources: <a target="_blank" href="https://frontendmasters.com/courses/react/">FrontEndMasters Intro to React v.3</a> with Brian Holt & Tyler McGinnis <a target="_blank" href="https://www.youtube.com/watch?v=ul0tRkeu5CE&list=PLqrUy7kON1mc7U60YUaN3ZR9EHlh9fsDL">React Fundamentals</a> --Neither of which use "create-react-app" which is a way to set up react without control over the tooling. It's loads of fun, but lots of moving parts--trading complexity for ease of use. There are so many discoveries I've made in the past few days...too many to mention. I will add another section to <em>Code Journal</em> which is already bursting at the seams.</h3>
@@ -35,7 +85,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>AXIOS Implemented and pushed!</li>
   </ol>
   <hr />
   <h2 class="date">Thursday July 27th, 2017</h2>
